# finite-model

./: Cargo.toml  README.md
derive/: Cargo.toml
derive/src/: lib.rs
src/: finite_set_impl.rs  lib.rs
