[package]
name = "finite-model-derive"
version = "0.1.0"
authors = ["Curtis Millar <curtis@curtism.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
test = false

[dependencies]
syn = { version = "1.0.11", features = [ "full" ] }
quote = "1.0.2"
proc-macro2 = "1.0.6"
